--- a/serviceB/pipeline.yaml
+++ b/serviceB/pipeline.yaml
@@ -19,7 +19,7 @@ steps:
   inputs:
     azureSubscription: '${{ variables.serviceConectionName }}'
     ConfigstoreName: '${{ parameters.ConfigStoreName }}'
-    ConfigurationFile: 'config_management/serviceB/config/${{ parameters.Label }}-app-config.json'
+    ConfigurationFile: 'serviceB/config/${{ parameters.Label }}-app-config.json'
     Separator: ':'
     Prefix: 'ServiceB:'
     Label: '${{ parameters.Label }}'
@@ -28,7 +28,7 @@ steps:
   inputs:
     azureSubscription: '${{ variables.serviceConectionName }}'
     ConfigstoreName: '${{ parameters.ConfigStoreName }}'
-    ConfigurationFile: 'config_management/serviceB/secretrefs/${{ parameters.Label }}-secretref.json'
+    ConfigurationFile: 'serviceB/secretrefs/${{ parameters.Label }}-secretref.json'
     Separator: ':'
     Prefix: 'ServiceB:'
     Label: '${{ parameters.Label }}'
@@ -38,7 +38,7 @@ steps:
   inputs:
     azureSubscription: '${{ variables.serviceConectionName }}'
     ConfigstoreName: '${{ parameters.ConfigStoreName }}'
-    ConfigurationFile: 'config_management/serviceB/featureflags/${{ parameters.Label }}-featureflags.json'
+    ConfigurationFile: 'serviceB/featureflags/${{ parameters.Label }}-featureflags.json'
     Separator: ':'
     Depth: '1'
     Prefix: '.appconfig.featureflag/'
